# bfsp

./: Cargo.toml  build.rs  build_config.yml
src/: auth.rs  bfsp.cli.proto  bfsp.internal.proto  bfsp.ipc.proto  bfsp.proto  cli.rs  config.rs  crypto.rs  file.rs  internal.rs  lib.rs  sqlx.rs  test.rs
