[package]
name = "bfsp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
blake3 = { version = "1", features = ["rayon"] }
anyhow = { version = "1" }
tokio = { version = "1", features = ["fs", "io-util"] }
sqlx = { version = "0.7", default-features = false, features = [
     "sqlite",
     "macros",
], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["std"], optional = true }
zstd = "0.13"
log = "0.4"

thiserror = { version = "1" }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
prost = "0.12"
bytes = "1"
toml = { version = "0.8", optional = true }
directories = { version = "5", optional = true }
futures = { version = "0.3" }
rayon = { version = "1" }

[build-dependencies]
prost-build = { version = "0.12" }

[dev-dependencies]
tokio = { version = "1", features = [
     "fs",
     "io-util",
     "macros",
     "rt-multi-thread",
] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

[features]
default = ["auth", "cli", "config"]
file = ["crypto", "sqlx", "uuid"]
auth = ["serde", "serde_derive"]
crypto = ["chacha20poly1305"]
cli = ["file"]
config = ["serde", "toml", "directories"]
